Prepare project for deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-flask
-scikit-learn==1.6.1
-pandas
-numpy
-joblib
+flask==2.3.3
+numpy==1.24.4
+pandas==2.0.3
+scikit-learn==1.2.2
+gunicorn==21.2.0
+joblib==1.3.1
